--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Siva-Weather Site</title>
+  <title>Weather Site</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
@@ -33,7 +33,7 @@
       <div class="wind">Wind speed: 6.2 km/h</div>
       <div class="footer">
         <div>
-          <h3>Project Done By : <span class="siva">siva</span></h3>
+          <h3>Project Done By : <span class="siva">Kathir</span></h3>
         </div>
       </div>
     </div>
